Archive2/8a/690d5447448e37/output
main.cpp:2:2: error: stray '#' in program
 2#include <stdlib.h>
  ^
main.cpp:2:1: error: expected unqualified-id before numeric constant
 2#include <stdlib.h>
 ^
